<resources>
    <string name="app_name">Mafia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_totorial">Totorial</string>
    <string name="menu_start">Start Game</string>

    <string name="home_second">Home Second</string>
    <string name="mafia">Mafia</string>
    <string name="hint_name">Name</string>
    <string name="hint_Shahrvand">Shahrvand</string>
    <string name="hint_Mafia">Mafia</string>
    <string name="submit">Submit</string>
    <string name="Citizen">Citizen</string>
    <string name="Cancel">Cancel</string>
    <string name="_default">Default</string>


    <string name="Citizen_Description">ابتدایی‌ترین نقش گروه شهروند هاست. شهروند کسی را در بازی نمیشناسد و باید مافیا را شناسایی کند. شهروند ساده فقط قدرت صحبت کردن در روز و شرکت در رای گیری ها را داراست.</string>
    <string name="Doctor_Description">هر شب به دستور خدا بیدار شده و یک نفر را که احتمال می‌دهد مافیا آن را ترور کرده باشد، نجات می‌دهد. در صورت تشخیص صحیح، آن فرد از بازی حذف نمی‌شود. دکتر می‌تواند هر شخصی که در فاز شب و به هر صورتی کشته می‌شود را نجات دهد.</string>
    <string name="Gaurd_Description">در فاز شب به هیچ صورتی حذف نمی‌شود. مگر اینکه توسط ساقی انتخاب شود. محافظ در طول روز می‌تواند شخصی که توسط تروریست از بازی خارج می‌شود را حفظ نماید. در این صورت خود محافظ تبدیل به شهروند ساده بازی می‌شود. همچنین اگر خود محافظ در رای گیری روز اول رای بیاورد در بازی حفظ شده و تبدیل به شهروند ساده شود.</string>
    <string name="Freemasone_Description">در فاز شب و به دستور خدا بیدار شده و به حدس خود یکی از شهروندان را بیدار می‌کند و از شب بعد به دستور فراماسون اعظم فرد دیگری را بیدار می‌کند. در صورتی که حدسش درست باشد و شخص بیدار شده، از گروه شهروندها باشد، این دو نفر همدیگر را شناخته و باهم فراماسون می‌شوند. اما در صورتی که حدسش اشتباه باشد و مافیا بیدار کند (بجز جاسوس)، تمامی فراماسون‌ها از بازی حذف می‌شوند و مافیا در بازی باقی می‌ماند. در صورت حذف فراماسون اعظم، دومین فراماسون، بعنوان فراماسون اعظم شناخته می‌شود. فراماسون میتواند در شب کسی را بیدار نکند.</string>
    <string name="Prist_Description">در فاز شب به دستور خدا بیدار شده و شخصی را که توسط ناتاشا سایلنت شده، در صورت تشخیص صحیح، از سایلنت بودن میرهاند. </string>
    <string name="Revengeous_Description">در فاز شب و در اثر تیر مافیا و کیلر از بازی حذف نمی‌شود. (رویین تن در اثر رای گیری، مرگ فراماسونی، گلوله اسنایپر، انفجار بمب و ... از بازی حذف می‌شود).</string>
    <string name="Musketeer_Description">در فاز شب (نسبت به تعداد بازیکنان یک یا چند شب) می‌تواند به یکی از بازیکنان اسلحه داده و آن شخص میتواند در فاز روز از آن اسلحه قبل از دفاعیه بازیکن از آن استفاده کرده و یک نفر را بکشد. تفنگ‌دار نمی‌تواند از اسلحه خود استفاده کند. اگر فردی که به او اسلحه داده شده سایلنت شده باشد نمی‌تواند از اسلحه خود استفاده کند.</string>
    <string name="Detactive_Description">در فاز شب به دستور خدا بیدار شده و مافیای احتمالی خود را به خدا نشان داده و خدا صحت یا عدم صحت حدسش را تایید می‌کند.در صورتی که کارآگاه از خدا، گادفادر را استعلام کند، خدا حدس کارآگاه را اشتباه اعلام می‌کند.</string>
    <string name="Sniper_Description">از اعضای شهروند است که حق شلیک در شب را داراست. وی به دستور خدا بیدار شده و در صورت تشخیص مافیا میتواند به او شلیک کرده و از بازی حذفش کند. تک تیرانداز با توجه به تعداد بازیکنان، تیرهایش متغیر است.</string>
    <string name="Vrigin_Description">اگر در طول روز با رای گیری از دور بازی خارج شود، مافیا در شب بعدی قدرت کشتن خود را از دست می‌دهند و خدا در روز بعد فقط اعلام می‌کند که " کسی کشته نشده ". فقط در صورتی مافیا می‌تواند در شب بعد کسی را بکشد که مرد قوی در بازی حضور داشته باشد و تنها دستور قتل خود را بدهد.</string>
    <string name="Natasha_Description">ناتاشا نقشی سیاه دارد بر اساس قرار داد بازیکنان و یا انتخاب خدا میتواند عضو مافیا یا شهروندان باشد. ناتاشا هر شب با اعلام خدا بیدار شده و به یک نفر اشاره می‌کند. آن بازیکن در روز بعد اجازه صحبت کردن و یا دفاع کردن از خود را ندارد. نقش مقابل ناتاشا، کشیش است.</string>
    <string name="Strongman_Description">مرد قوی یک گلوله دارد که در فاز شب می‌تواند از آن استفاده کند. تیر مرد قوی در هر صورت بازیکن را از بازی خارج می‌کند. حتی اگر روئین تن یا محافظ باشد و یا دکتر آن بازیکن را سیو کرده باشد. زمانی که مرد قوی یک بازیکن را حذف می‌کند، در آن شب گادفادر دیگر اجازه شلیک ندارد.</string>
    <string name="Godfather_Description">رئیس همه مافیاها می‌باشد و دستور نهایی قتل در شب را صادر می‌کند. همچنین استعلام کارآگاه برای گادفادر اشتباه اعلام می‌شود.</string>
    <string name="Wizard_Description">هر شب به یک نفر اشاره کرده و نقش آن بازیکن را فقط برای همان شب غیر فعال می‌کند (دکتر نمیتواند سیو کند،کارآگاه نمیتواند استعلام بگیرد و...).</string>
    <string name="Mafia_Description">در طول شب با اعلام خدا بیدار شده و دیگر مافیاها را می‌شناسد و در طول روز تلاش می‌کند تا با رای‌گیری یک شهروند را حذف نماید.</string>
    <string name="Lawyer_Description">هر شب به یکی از مافیاها (به جز خودش) اشاره می‌کند و اصطلاحا وکالت او را برعهده می‌گیرد و آن فرد در استعلام کارآگاه به عنوان شهروند معرفی می‌شود.</string>
    <string name="Slander_Description">هر شب به یکی از بازیکنان اشاره می‌کند. اگر کارآگاه بازی همان فرد را استعلام کند، خدا آن فرد را مافیا معرفی می‌کند.</string>
    <string name="Dealer_Description">هر شب با اعلام خدا بیدار شده و به حدس خود به یکی از بازیکنان اشاره می‌کند. اگر فرد مورد نظر گادفادر باشد، نقشش غیر فعال می‌شود. اگر ناتاشا باشد، خودش سایلت می‌شود. در صورتی که ساقی به کارآگاه اشاره کند، استعلام کارگاه برعکس اعلام می‌شود و برای دیگر نقش‌های شهروندی، نقششان غیر فعال می‌شود.</string>
    <string name="Killer_Description">نه شهروند است و نه مافیا. هیچ کس را نمی‌شناسد و هر شب با اعلام خدا بیدار شده و یک نفر را به قتل میرساند.اگر به هر نحوی بازی تمام شود (همه مافیاها حذف شده و یا تعداد مافیا و شهروند برابر باشند) اگر کیلر در بازی حضور داشته باشد، کیلر برنده ی بازیست.</string>
    <string name="Joker_Description">در صورتی که در فاز روز و در رای گیری حذف شود، برنده ی بازیست.</string>
    <string name="Terrorist_Description">اگر در طول روز با رای‌گیری حذف شود می‌تواند یکی از بازیکنان را از بازی خارج نماید.</string>
    <string name="Spy_Description">اگر فراماسون بازی جاسوس را بیدار کند، فراماسون‌ها نمی‌میرند و جاسوس درون فراماسون‌ها رخنه می‌کند.</string>
    <string name="Thief_Description">دیگر مافیاها را نمی‌شناسد. در فاز شب به یک نفر اشاره کرده و اگر آن فرد دارای نقش باشد، نقش آن فرد را مال خود می‌کند (فقط برای همان شب). همچنین استعلام کارآگاه برای دزد مثبت می‌شود.</string>
    <string name="Cowboy_Description">می‌تواند در طول روز اعلام نقش کرده و یک نفر را که احتمال می‌دهد جزو مافیاست به همراه خود از بازی بیرون ببرد. (کابوی در صورت اعلام نقش، حتما باید شخصی را به همراه خود از بازی بیرون ببرد).</string>
    <string name="Judge_Description">می‌تواند رای گیریِ انجام شده در طول روز را فقط برای یک بار باطل کند. نحوه اعلام ابطال رای گیری توسط قاضی بدین صورت است که پس از رای گیری، خدا اعلام شب کرده و قاضی را بیدار می‌کند. سپس قاضی نظر خود را در خصوص حذف یا عدم حذف بازیکن اعلام می‌نماید.</string>
    <string name="Bomber_Description">در صورت حذف در فاز روز یا شب، دو نفری که اطرافش هستند را نیز از بازی خارج میکند. در صورت حذف افراد کناری بمبر، نفر بعدی همجوار او محسوب خواهد شد. بمبر می‌تواند خود را در هر لحظه از بازی منفجر کند.</string>
    <string name="pay_attention">توجه کنید</string>
    <string name="attention_message">این کارد توسط شخص دیگری دیده شده است. با این حال می خواهید آن را ببینید ؟</string>
    <string name="btn_yes">بله</string>
    <string name="btn_no">خیر</string>
    <string name="rate_us">Rate Us</string>
    <string name="setting">Setting</string>
    <string name="roles">Roles</string>
    <string name="about_us">Conect Us</string>


</resources>
