<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/layout_margin_8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/v_s_img_mafia_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/value_selector_button_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_txt_mafia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/value_selector_plus" />

            <TextView
                android:id="@+id/v_s_txt_mafia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/mafia"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_txt_mafia_num"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/v_s_img_mafia_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/value_selector_button_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/v_s_txt_mafia_num"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/item_selector_remove" />

            <TextView
                android:id="@+id/v_s_txt_mafia_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/v_s_txt_mafia"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/layout_margin_8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/v_s_img_citizen_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/value_selector_button_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_txt_citizen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/value_selector_plus" />

            <ImageView
                android:id="@+id/v_s_img_citizen_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/value_selector_button_background"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/v_s_txt_citizen_num"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/item_selector_remove" />

            <TextView
                android:id="@+id/v_s_txt_citizen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/Citizen"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_txt_citizen_num"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/v_s_txt_citizen_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/v_s_txt_citizen"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/v_s_btn_submit"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:text="@string/submit"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/v_s_btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Cancel"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_btn_submit"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/v_s_btn_reset"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_default"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/v_s_btn_cancel"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>